etc/tests/fuzz/errors/adt/missing-constructor-field.nshape
shape adt-missing-constructor-field {
  family "compiler-errors/adt"
  generator "error"
  features ["error", "adt", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "missing field 'radius' for ADT variant 'Shape.Circle'"
  source ny <<'NY'
use std.core

enum Shape {
   Circle(int radius),
   Empty
}

def x = Shape.Circle()
print(x)
NY
}
